Fixed some Java 5 SDK contamination.